--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,34 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug with Firefox",
-            "request": "launch",
-            "type": "firefox",
-            "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
+            "name": "Attach to Edge",
+            "port": 9222,
+            "request": "attach",
+            "type": "pwa-msedge",
+            "webRoot": "${workspaceFolder}",
+            "sourceMaps": true,
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "outFiles": [
+                "${workspaceFolder}/**/*.js",
+                "!**/node_modules/**"
+            ]
         },
+
         {
             "name": "Debug with Chrome",
             "request": "launch",
-            "type": "pwa-chrome",
+            "type": "chrome",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
-        },
+            "webRoot": "${workspaceFolder}",
+            "sourceMaps": true,
+            "skipFiles": [
+                "${workspaceFolder}/node_modules/**/*.js",
+            ],
+            "outFiles": [
+                "${workspaceFolder}/**/*.js",
+            ]
+        }
     ]
 }
