--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
   ],
   "website": "https://metabase.com/",
   "repository": "https://github.com/metabase/metabase",
+  "//#start#_logo":"Ganti logo tersebut lewat link.",
   "logo": "https://avatars3.githubusercontent.com/u/10520629?v=3&s=200",
   "success_url": "/setup",
   "env": {
