--- a/package.json
+++ b/package.json
@@ -99,8 +99,10 @@
     "styled-system": "2.2.5",
     "tether": "^1.2.0",
     "tippy.js": "^6.3.5",
+    "ts-node": "^10.7.0",
     "ttag": "1.7.15",
     "underscore": "^1.8.3",
+    "yarn": "^1.22.18",
     "yarn.lock": "^0.0.1-security",
     "z-index": "0.0.1"
   },
@@ -165,7 +167,7 @@
     "@types/prettier": "1.19.1",
     "@types/prop-types": "^15.7.4",
     "@types/raf": "^3.4.0",
-    "@types/react": "~16.14.17",
+    "@types/react": "^17.0.43",
     "@types/react-collapse": "^5.0.1",
     "@types/react-color": "^2.17.6",
     "@types/react-copy-to-clipboard": "^5.0.2",
@@ -173,6 +175,7 @@
     "@types/react-grid-layout": "^1.1.3",
     "@types/react-is": "^17.0.3",
     "@types/react-motion": "0.0.32",
+    "@types/react-native": "^0.67.3",
     "@types/react-redux": "^5.0.22",
     "@types/react-resizable": "^1.7.4",
     "@types/react-router": "3.0.28",
@@ -233,9 +236,10 @@
     "prettier": "1.19.1",
     "promise-loader": "^1.0.0",
     "raf": "^3.4.0",
+    "react-native-typescript-transformer": "^1.2.13",
     "shadow-cljs": "2.11.20",
     "style-loader": "0.23.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.6.3",
     "webpack": "^5.69.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
